# akamai-techdocs-mcp

./: .gitignore  README.md  conftest.py  hatch_build.py  pyproject.toml  sources.yaml
.github/workflows/: build-index.yml  release.yml
crawler/: build_index.py  chunker.py  fetcher.py  manifest.py  openapi.py  parser.py  playwright_transport.py  schema.sql  writer.py
docs/: linode-terraform-best-practices.md
examples/: README.md
examples/01-nodebalancer-vpc-apache/: README.md  cloud-init.yaml  main.tf  outputs.tf  prompt.txt  terraform.tfvars.example  variables.tf  versions.tf
examples/02-object-storage-private-bucket/: README.md  main.tf  outputs.tf  prompt.txt  terraform.tfvars.example  variables.tf
examples/03-managed-mysql-database/: .gitignore  README.md  main.tf  outputs.tf  prompt.txt  terraform.tfvars.example  variables.tf  versions.tf
examples/04-lke-autoscaling-cluster/: .gitignore  README.md  main.tf  outputs.tf  prompt.txt  terraform.tfvars.example  variables.tf  versions.tf
examples/04-lke-autoscaling-cluster/k8s/: apache.yaml  nginx.yaml  sample-deployment.yaml
examples/weather-by-zip/: README.md  spin.toml
examples/weather-by-zip/src/: index.ts
src/akamai_techdocs_mcp/: __main__.py  index.py  server.py  updater.py
tests/: test_chunker.py  test_fetcher.py  test_index.py  test_manifest.py  test_openapi.py  test_parser.py  test_playwright_transport.py  test_schema.py  test_server.py  test_smoke.py  test_updater.py  test_writer.py
