[project]
name = "akamai-techdocs-mcp"
version = "0.0.1"
description = "MCP server over Akamai Functions and Spin Framework documentation"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Samir Karande" },
]
keywords = ["mcp", "akamai", "documentation", "ai", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[dependency-groups]
# CI-only crawler dependencies. Not part of [project.dependencies] because
# end users never run the crawler; only the GitHub Actions weekly rebuild
# does. The dev group includes this so local tests can exercise crawler
# modules.
crawler = [
    "pyyaml>=6.0",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "playwright>=1.45",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyright>=1.1",
    {include-group = "crawler"},
]

[project.scripts]
akamai-techdocs-mcp = "akamai_techdocs_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/samkarande/akamai-techdocs-mcp"
Issues = "https://github.com/samkarande/akamai-techdocs-mcp/issues"
Source = "https://github.com/samkarande/akamai-techdocs-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akamai_techdocs_mcp"]

# Custom hook (see hatch_build.py) conditionally bundles
# dist/index.sqlite into the wheel when it exists. CI runs the crawler
# before building so the wheel ships with a fresh index; source installs
# on user machines (`uv tool install git+https://...`, `uvx --from
# git+...`) build a wheel without the bundled index and rely on the
# server's auto-updater to pull one from GitHub Releases on first run.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pyright]
include = ["src", "tests", "crawler"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
